@@ -1,2 +1,9 @@
 name, molecular mass
+CH2, 14.01565
+NH3, 17.02655
 H20, 18.0153
+CH4, 16.0313
+CO, 27.9949
+COCH2, 42.01057
+CO2, 43.9898
+C2H4, 28.0313
